{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "11a23b73-0df3-4f8e-b206-f454e1e7ba8a",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "58250f11-62f1-4033-8a8f-6352259a0cf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "702c9ad4-9afb-4f54-b600-f9e8afa92118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8af63188-cd48-44f8-9355-04f72249402f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00c5f5ef-5bae-456c-b92b-9689ef4a2ad2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc25c976-e0e5-4c49-af24-8c6f1fae4b2f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d58f45-3ae7-4c5c-9124-1cff2c894f9f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c38b5a9d-f99e-4d32-959b-ccb2de4ad73e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}